--- a/azbuka46.html
+++ b/azbuka46.html
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Азбука покрытий | Напольные покрытия от производителя</h1>
+                    <h1>Азбука покрытий | Травмобезопасные покрытия от призводителя</h1>
                 </div>
             </header>
         </div>
@@ -269,7 +269,7 @@
                 <div class="partners-flex-item">
                     <span>3</span>
                     <div class="partners-flex-text">
-                        Получите 3 года гарантийного и сервисного обслуживания
+                        3 года гарантийного и сервисного обслуживания
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
             </div>
             <div class="contact-block">
                 <h3>ООО «АЗБУКА ПОКРЫТИЙ»</h3>
-                <p>Напольные покрытия от производителя</p>
+                <p>Травмобезопасные покрытия от производителя</p>
                 <p><i class="fa-solid fa-location-dot"></i> 305023, РФ, г Курск, ул Литовская, дом 12А, офис
                     407</p>
                 <p><a href="tel:+79155103672"><i class="fa-solid fa-square-phone"></i> +7 (915)
