--- a/card.html
+++ b/card.html
@@ -159,10 +159,6 @@
 
                 <p>Высокая прочность материала позволяет выкладывать дорожки во дворах многоквартирных домов и на
                     частной территории, а также выстилать открытые террасы и другие площадки.</p>
-
-                <p>Такие покрытия применяются в разных промышленных отраслях, дорожном строительстве. Резиновое
-                    бесшовное покрытие используют для устройства тротуаров или прокладки дорожного полотна, где сырье из
-                    покрышек применяют в качестве одного из компонентов асфальта.</p>
             </div>
 
         </div>
@@ -174,8 +170,8 @@
                 Характеристика бесшовного резинового покрытия
             </div>
             <div class="cart-tab-property-number list-goods-page">
-                <p><i class="fa-solid fa-circle-check"></i> Материал обладает антикоррозийными свойствами и
-                    может применять на открытом воздухе, не опасаясь негативных воздействий окружающей среды.
+                <p><i class="fa-solid fa-circle-check"></i> Материал обладает антикоррозийными свойствами – его можно
+                    применять на открытом воздухе, не опасаясь негативных воздействий окружающей среды.
                 </p>
                 <p><i class="fa-solid fa-circle-check"></i>Правильный монтаж обеспечивает долговременный срок
                     службы — свыше 10 лет.</p>
@@ -216,7 +212,7 @@
         <div class="clearfix"></div>
 
         <h2 class="title-page-item">Прайс-лист</h2>
-        <p>Искусственные газоны различаются по назначению и характеристикам. По видам они подразделяются на:</p>
+
         <div class="table-mobile-scroll">
             <table class="table-price">
                 <tbody>
@@ -225,7 +221,8 @@
                         <td colspan="5">Цена руб./м2*</td>
                     </tr>
                     <tr>
-                        <td>Standard — Однослойное неокрашенное покрытие из черной резиновой крошки</td>
+                        <td><span class="bold-text">Standard</span> — Однослойное неокрашенное покрытие из черной
+                            резиновой крошки</td>
                         <td>До 100 м2</td>
                         <td>от 100 м2</td>
                         <td>от 250 м2</td>
@@ -265,7 +262,8 @@
                         <td>договорная</td>
                     </tr>
                     <tr>
-                        <td>Classic — Однослойное окрашенное покрытие из черной резиновой крошки с красящим пигментом
+                        <td><span class="bold-text">Classic</span> — Однослойное окрашенное покрытие из черной резиновой
+                            крошки с красящим пигментом
                         </td>
                         <td>До 100 м2</td>
                         <td>от 100 м2</td>
@@ -306,7 +304,8 @@
                         <td>договорная</td>
                     </tr>
                     <tr>
-                        <td>Comfort — Двухслойное покрытие (сэндвич) из черной резиновой крошки с полноцветным EPDM и
+                        <td><span class="bold-text">Comfort</span> — Двухслойное покрытие (сэндвич) из черной резиновой
+                            крошки с полноцветным EPDM и
                             повышенной яркостью цвета с износостойкостью</td>
                         <td>До 100 м2</td>
                         <td>от 100 м2</td>
@@ -339,7 +338,8 @@
                         <td>договорная</td>
                     </tr>
                     <tr>
-                        <td>Premium — Однослойное каучуковое покрытие из полноцветной крошки EPDM с повышенной яркостью
+                        <td><span class="bold-text">Premium</span> — Однослойное каучуковое покрытие из полноцветной
+                            крошки EPDM с повышенной яркостью
                             цвета с износостойкостью</td>
                         <td>До 100 м2</td>
                         <td>от 100 м2</td>
