--- a/contacts.html
+++ b/contacts.html
@@ -157,7 +157,7 @@
             </div>
             <div class="contact-block">
                 <h3>ООО «АЗБУКА ПОКРЫТИЙ»</h3>
-                <p>Напольные покрытия от производителя</p>
+                <p>Травмобезопасные покрытия от производителя</p>
                 <p><i class="fa-solid fa-location-dot"></i> 305023, РФ, г Курск, ул Литовская, дом 12А, офис
                     407</p>
                 <p><a href="tel:+79155103672"><i class="fa-solid fa-square-phone"></i> +7 (915)
