--- a/tile.html
+++ b/tile.html
@@ -160,12 +160,6 @@
                     подлежащие утилизации. Именно из них получается резиновая крошка, к которой добавляется специальный
                     клеевой состав на полиуретановой основе и пигментные нетоксичные красители, обладающие высокой
                     устойчивостью к выгоранию. Изготавливается плитка резиновая с применением разных технологий.</p>
-
-                <p>В основном — это методы вибролитья и вибропрессования (горячего или холодного). В результате
-                    получается оригинальная тротуарная плитка толщиной от 3 до 10 см, обладающая массой достоинств. Но,
-                    как и у любого другого строительного материала изделия имеют некоторые недостатки. Зная
-                    положительные и отрицательные стороны современного резинового покрытия, легче определяться с выбором
-                    нужного материала.</p>
             </div>
 
         </div>
@@ -633,6 +627,34 @@
             <div class="title-page-item">
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Оставить
                     заявку</button>
+            </div>
+            <h2 class="title-page-item">Примеры работ</h2>
+            <div class="portfolio-page-block">
+                <div class="portfolio-block-item">
+                    <a href="images/tile1.jpg" data-fancybox="gallery">
+                        <img src="images/tile1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/tile2.png" data-fancybox="gallery">
+                        <img src="images/tile2.png" alt="">
+                    </a>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/tile3.jpeg" data-fancybox="gallery">
+                        <img src="images/tile3.jpeg" alt="">
+                    </a>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/tile4.jpg" data-fancybox="gallery">
+                        <img src="images/tile4.jpg" alt="">
+                    </a>
+                </div>
+                <div class="portfolio-block-item">
+                    <a href="images/tile5.jpg" data-fancybox="gallery">
+                        <img src="images/tile5.jpg" alt="">
+                    </a>
+                </div>
             </div>
     </section>
 
