--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                     <span class="pages__href">tile.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_orange">
+                <a href="grass.html" target="_blank">
+                    <span class="pages__name">Искусственный газон</span>
+                    <span class="pages__href">grass.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
