--- a/azbuka46.html
+++ b/azbuka46.html
@@ -154,10 +154,10 @@
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog1.jpg"></a>
+                        <a href="card.html"><img alt="" src="images/catalog1.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Бесшовное резиновое покрытие</a>
+                        <a href="card.html">Бесшовное резиновое покрытие</a>
                     </div>
                     <div class="main-catalog-description">
                         <p> Бесшовное покрытие из резиновой крошки SBR, ЭПДМ (EPDM). Высокая прочность материала
@@ -167,7 +167,7 @@
                         </p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
+                <a href="card.html" class="page-btn">Перейти</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -188,16 +188,16 @@
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog10.jpg"></a>
+                        <a href="grass.html"><img alt="" src="images/catalog10.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Искусственный газон</a>
+                        <a href="grass.html">Искусственный газон</a>
                     </div>
                     <div class="main-catalog-description">
                         <p>Специальное покрытие, имитирующее обычную траву, но более долговечное и удобное.</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Подробнее</a>
+                <a href="grass.html" class="page-btn">Подробнее</a>
             </div>
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
@@ -232,17 +232,17 @@
             <div class="main-catalog-item">
                 <div class="flex-catalog-item">
                     <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog13.jpg"></a>
+                        <a href="poliuretanovoe.html"><img alt="" src="images/catalog13.jpg"></a>
                     </div>
                     <div class="main-catalog-title">
-                        <a href="#">Полиуретановое связующее</a>
+                        <a href="poliuretanovoe.html">Полиуретановое связующее</a>
                     </div>
                     <div class="main-catalog-description">
                         <p>Разновидность однокомпонентного полиуретанового клея, обладающего определёнными
                             физико-химическими свойствами.</p>
                     </div>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
+                <a href="poliuretanovoe.html" class="page-btn">Перейти</a>
             </div>
         </div>
         <div class="title-page-item">
