--- a/poliuretanovoe.html
+++ b/poliuretanovoe.html
@@ -144,113 +144,105 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Рулонные резиновые покрытия</h1>
+                    <h1>Полиуретановое связующее</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                <li class="breadcrumb-item"><a href="#">Каталог</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Рулонные резиновые покрытия</li>
-            </ol>
-        </nav>
-        <div class="main-flex-catalog">
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll1.html"><img alt="" src="images/catalog2.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll1.html">ANT Flex Eco Monolit</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
-                            связующего,
-                            позволяющего получать высокую прочность сцепления резиновых гранул.</p>
-                    </div>
-                </div>
-                <a href="roll1.html" class="page-btn">Перейти</a>
+        <div class="good-main-desk">
+            <div class="overlay-block"></div>
+            <div class="text-images-good">
+                <p>Полиуретановое связующее - это разновидность однокомпонентного полиуретанового клея, обладающего
+                    определёнными физико-химическими свойствами. Применяется при изготовлении спортивных покрытий из
+                    резиновой крошки. Данные покрытия отличаются хорошей водопроницаемостью, устойчивостью к истиранию и
+                    великолепными амортизирующими свойствами.</p>
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog3.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Flex Eco Granit</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
-                            регенератной резиновой крошки (не более 50 %).</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+
+        </div>
+        <div class="good-item-pages">
+            <div class="good-item-page-img">
+                <img src="images/catalog13.jpg" title="Полиуретановое связующее" alt="Полиуретановое связующее">
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog4.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Flex Eco Премиум</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
-                            каучука ЭПДМ (TPV).</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+            <div class="cart-tab-property-title">
+                Технология применения
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog5.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Mix</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное покрытие на основе регенератной резиновой крошки и цветных ЭПДМ гранул
-                            (не менее 15%).</p>
-                    </div>
+            <div class="cart-tab-property-number list-goods-page">
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">1. Подготовка поверхности</span></p>
+
+                <p>Покрытие обычно наносится на бетонное, асфальтовое или деревянное основание. Для обеспечения высокой
+                    адгезии покрытия, основание очищают от грязи, пыли, удаляют участки бетона и асфальта, подвергшиеся
+                    разрушению. Бетонную поверхность подвергают шлифовке с целью удаления цементного молока, слоя
+                    железнения. Шлифовку бетона осуществляют по сухому или слегка влажному основанию, затем пыль удаляют
+                    пылесосом. Необходимо исключить прилипание мокрой пыли к основанию во время шлифовки. Если покрытие
+                    делается на улице, желательно обеспечить небольшой уклон основания для воды. Перед нанесением
+                    покрытия основание должно быть чистым, сухим, слегка шероховатым. Работы на открытом воздухе
+                    желательно проводить при температуре не ниже +5 oС и в сухую погоду.</p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">2. Грунтование</span></p>
+                <p>Для обеспечения хорошего сцепления основания и покрытия, подготовленное согласно п.1 основание
+                    грунтуют. В качестве грунта используют следующие виды грунтовок: — Грунтовка на основе лака
+                    Применяется для пропитки, упрочнения, обеспыливания, увеличения ударной и химической стойкости
+                    бетонного основания. Пропитку бетона на 4-6 мм осуществляют смесью лака и растворителя в пропорции
+                    1:1 в два слоя с промежуточной сушкой 6ч8 часов. Расход грунтовки на два слоя грунтования 0,2 кг/м2.
+                </p>
+                <p><i class="fa-solid fa-circle-check"></i> <span class="bold-text">3. Укладка покрытия</span></p>
+                <p>В бетономешалке либо вручную готовят смесь следующего состава (из расчета на 1 м2 при толщине
+                    покрытия 10 мм): — крошка резиновая — 6 кг — связующее — 1,2 кг — пигмент (при необходимости) —
+                    0,15-0,3кг Приготовленная смесь выкладывается на загрунтованное основание, разравнивается раклями и
+                    прикатывается валиком, смазанным антиадгезивом.
+                </p>
+                <p>При температуре 20°С и относительной влажности воздуха 80% покрытие отверждается до пешеходной
+                    нагрузки за одни сутки. Эксплуатация в полном объеме — через одну неделю. Скорость отверждения
+                    покрытия тем выше, чем выше температура и относительная влажность воздуха.</p>
+                <div class="cart-tab-property-title">
+                    Свойства
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog8.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Сombi Standart Color</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Напольное двухслойное покрытие: верхний слой на основе окрашенной регенератной резиновой
-                            крошки, нижний слой - из черной регенератной резиновой крошки.</p>
-                    </div>
+                <div class="table-mobile-scroll">
+                    <table class="table-price">
+                        <tbody>
+                            <tr>
+                                <td class="bold-text">Состав</td>
+                                <td class="bold-text">Полиуретановый преполимер, целевые добавки</td>
+                            </tr>
+                            <tr>
+                                <td>Содержание нелетучих веществ</td>
+                                <td>100 %</td>
+                            </tr>
+                            <tr>
+                                <td>Время отверждения покрытия (при +20°С и отн. влажности воздуха 70 %)</td>
+                                <td>пешеходные нагрузки — не более 24ч<br>
+                                    транспортные нагрузки — через 3-5 дней</td>
+                            </tr>
+                            <tr>
+                                <td>Рекомендуемый фракционный состав резиновой или ЭПДМ крошки</td>
+                                <td>от 2.0 мм до 6,0 мм</td>
+                            </tr>
+                            <tr>
+                                <td>Содержание групп - NCO</td>
+                                <td>10.89 %</td>
+                            </tr>
+                            <tr>
+                                <td>Вязкость при 25 °С</td>
+                                <td>2550 мПа * с</td>
+                            </tr>
+                            <tr>
+                                <td>Адгезионная прочность</td>
+                                <td>не менее 1,5 Н/мм2</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog9.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Flex — ANT Flex Color</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Цветное плотное напольное покрытие на основе регенератной резиновой крошки</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
             </div>
         </div>
-    </section>
+        <div class="clearfix"></div>
 
+
+        <div class="title-page-item">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                консультацию</button>
+        </div>
+
+    </section>
 
     <footer class="footer-page">
         <div class="container">
