--- a/roll1.html
+++ b/roll1.html
@@ -144,113 +144,67 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Рулонные резиновые покрытия</h1>
+                    <h1>Рулонное напольное покрытие ANT Flex Eco Monolit</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                <li class="breadcrumb-item"><a href="#">Каталог</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Рулонные резиновые покрытия</li>
-            </ol>
-        </nav>
-        <div class="main-flex-catalog">
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll1.html"><img alt="" src="images/catalog2.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll1.html">ANT Flex Eco Monolit</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
-                            связующего,
-                            позволяющего получать высокую прочность сцепления резиновых гранул.</p>
-                    </div>
-                </div>
-                <a href="roll1.html" class="page-btn">Перейти</a>
+        <div class="good-main-desk">
+            <div class="overlay-block"></div>
+            <div class="text-images-good">
+                <p>Cовременное напольное рулонное покрытие ANT Flex Eco Monolit. Материал на основе регенеративной
+                    резиновой крошки, EPDM гранулята и полиуретанового связующего, позволяющего получать высокую
+                    прочность сцепления резиновых гранул.</p>
+                <p>Обладает высокой износостойкостью, водостойкостью, стойкостью к точечным механическим повреждениям.
+                    Материал комбинированный, верхний слой из EPDM-крошки и полиуретанового связующего, подложка из
+                    черной крошки и полиуретанового связующего.</p>
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog3.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Flex Eco Granit</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
-                            регенератной резиновой крошки (не более 50 %).</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+
+        </div>
+        <div class="good-item-pages">
+            <div class="good-item-page-img">
+                <img src="images/catalog2.jpg" title="ANT Flex Eco Monolit" alt="ANT Flex Eco Monolit">
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog4.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Flex Eco Премиум</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
-                            каучука ЭПДМ (TPV).</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+            <div class="cart-tab-property-title">
+                Области применения напольного покрытия:
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog5.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Mix</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное покрытие на основе регенератной резиновой крошки и цветных ЭПДМ гранул
-                            (не менее 15%).</p>
-                    </div>
+            <div class="cart-tab-property-number list-goods-page">
+                <p><i class="fa-solid fa-circle-check"></i> Покрытие для беговых дорожек легкоатлетических арен.</p>
+                <p><i class="fa-solid fa-circle-check"></i> Покрытие спортивных площадок.</p>
+                <div class="cart-tab-property-title">
+                    Тип выпуска
                 </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog8.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Сombi Standart Color</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Напольное двухслойное покрытие: верхний слой на основе окрашенной регенератной резиновой
-                            крошки, нижний слой - из черной регенератной резиновой крошки.</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="#"><img alt="" src="images/catalog9.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="#">ANT Flex — ANT Flex Color</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Цветное плотное напольное покрытие на основе регенератной резиновой крошки</p>
-                    </div>
-                </div>
-                <a href="#" class="page-btn">Перейти</a>
+                <p>рулон, толщина от 15 мм., ширина 1,22 м., длина по желанию заказчика. Организуем оптовые поставки в
+                    любом объёме по низким ценам напрямую от производителя..</p>
             </div>
         </div>
-    </section>
+        <div class="clearfix"></div>
+        <h2 class="title-page-item">Варианты цветов покрытия</h2>
+        <div class="portfolio-page-block">
+            <div class="portfolio-block-item">
+                <a href="images/catalog2.jpg" data-fancybox="gallery">
+                    <img src="images/catalog2.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/flexeco2.jpg" data-fancybox="gallery">
+                    <img src="images/flexeco2.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/flexeco3.jpg" data-fancybox="gallery">
+                    <img src="images/flexeco3.jpg" alt="">
+                </a>
+            </div>
+        </div>
 
+        <div class="title-page-item">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                консультацию</button>
+        </div>
+
+    </section>
 
     <footer class="footer-page">
         <div class="container">
