--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                     <span class="pages__href">grass.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_orange">
+                <a href="poliuretanovoe.html" target="_blank">
+                    <span class="pages__name">Полиуретановое связующее</span>
+                    <span class="pages__href">poliuretanovoe.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
