--- a/index.html
+++ b/index.html
@@ -91,6 +91,42 @@
                     <span class="pages__href">poliuretanovoe.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_orange">
+                <a href="roll1.html" target="_blank">
+                    <span class="pages__name">ANT Flex Eco Monolit</span>
+                    <span class="pages__href">roll1.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="roll2.html" target="_blank">
+                    <span class="pages__name">ANT Flex Eco Granit</span>
+                    <span class="pages__href">roll2.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="roll3.html" target="_blank">
+                    <span class="pages__name">ANT Flex Eco Премиум</span>
+                    <span class="pages__href">roll3.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="roll4.html" target="_blank">
+                    <span class="pages__name">ANT Mix</span>
+                    <span class="pages__href">roll4.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="roll5.html" target="_blank">
+                    <span class="pages__name">ANT Сombi Standart Color</span>
+                    <span class="pages__href">roll5.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="roll6.html" target="_blank">
+                    <span class="pages__name">ANT Flex — ANT Flex Color</span>
+                    <span class="pages__href">roll6.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
