--- a/roll1.html
+++ b/roll1.html
@@ -175,8 +175,8 @@
                 <div class="cart-tab-property-title">
                     Тип выпуска
                 </div>
-                <p>рулон, толщина от 15 мм., ширина 1,22 м., длина по желанию заказчика. Организуем оптовые поставки в
-                    любом объёме по низким ценам напрямую от производителя..</p>
+                <p>Рулон, толщина от 15 мм., ширина 1,22 м., длина по желанию заказчика. Организуем оптовые поставки в
+                    любом объёме по низким ценам напрямую от производителя.</p>
             </div>
         </div>
         <div class="clearfix"></div>
