--- a/roll3.html
+++ b/roll3.html
@@ -144,113 +144,122 @@
                     </div>
                 </div>
                 <div class="title-page main-page-title">
-                    <h1>Рулонные резиновые покрытия</h1>
+                    <h1>Рулонное напольное покрытие ANT Flex Eco Премиум</h1>
                 </div>
             </header>
         </div>
     </div>
     <section class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                <li class="breadcrumb-item"><a href="#">Каталог</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Рулонные резиновые покрытия</li>
-            </ol>
-        </nav>
-        <div class="main-flex-catalog">
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll1.html"><img alt="" src="images/catalog2.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll1.html">ANT Flex Eco Monolit</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Материал на основе регенеративной резиновой крошки, EPDM гранулята и полиуретанового
-                            связующего,
-                            позволяющего получать высокую прочность сцепления резиновых гранул.</p>
-                    </div>
-                </div>
-                <a href="roll1.html" class="page-btn">Перейти</a>
+        <div class="good-main-desk">
+            <div class="overlay-block"></div>
+            <div class="text-images-good">
+                <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного каучука
+                    ЭПДМ (TPV). Покрытие является рецикличным, экологически чистым, не содержит вредных для здоровья
+                    примесей и компонентов, гипоаллергенно. Отличается особой прочностью, износостойкостью,
+                    УФ-стойкостью на протяжении всего срока эксплуатации, комфортабельностью и приятным грифом.
+                </p>
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll2.html"><img alt="" src="images/catalog3.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll2.html">ANT Flex Eco Granit</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco Granit на основе цветных ЭПДМ гранул и
-                            регенератной резиновой крошки (не более 50 %).</p>
-                    </div>
-                </div>
-                <a href="roll2.html" class="page-btn">Перейти</a>
+
+        </div>
+        <div class="good-item-pages">
+            <div class="good-item-page-img">
+                <img src="images/catalog3.jpg" title="ANT Flex Eco Granit" alt="ANT Flex Eco Granit">
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll3.html"><img alt="" src="images/catalog4.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll3.html">ANT Flex Eco Премиум</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное рулонное покрытие ANT Flex Eco на основе крошки из высококачественного
-                            каучука ЭПДМ (TPV).</p>
-                    </div>
-                </div>
-                <a href="roll3.html" class="page-btn">Перейти</a>
+            <p><span class="bold-text">Индивидуальный цвет.</span></p>
+            <p><span class="bold-text">Гипоаллергенное покрытие.</span></p>
+            <div class="cart-tab-property-title">
+                Области применения напольного покрытия:
             </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll4.html"><img alt="" src="images/catalog5.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll4.html">ANT Mix</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Cовременное напольное покрытие на основе регенератной резиновой крошки и цветных ЭПДМ гранул
-                            (не менее 15%).</p>
-                    </div>
+            <div class="cart-tab-property-number list-goods-page">
+                <p><i class="fa-solid fa-circle-check"></i> Площадки для отдыха</p>
+                <p><i class="fa-solid fa-circle-check"></i> Детские площадки</p>
+                <p><i class="fa-solid fa-circle-check"></i> Игровые площадки</p>
+                <p><i class="fa-solid fa-circle-check"></i> Спортивные площадки: футбол, теннис, волейбол, баскетбол</p>
+                <p><i class="fa-solid fa-circle-check"></i> Объекты многоцелевого назначения</p>
+                <p><i class="fa-solid fa-circle-check"></i> Террасы</p>
+                <div class="cart-tab-property-title">
+                    Тип выпуска
                 </div>
-                <a href="roll4.html" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll5.html"><img alt="" src="images/catalog8.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll5.html">ANT Сombi Standart Color</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Напольное двухслойное покрытие: верхний слой на основе окрашенной регенератной резиновой
-                            крошки, нижний слой - из черной регенератной резиновой крошки.</p>
-                    </div>
-                </div>
-                <a href="roll5.html" class="page-btn">Перейти</a>
-            </div>
-            <div class="main-catalog-item">
-                <div class="flex-catalog-item">
-                    <div class="main-catalog-image">
-                        <a href="roll6.html"><img alt="" src="images/catalog9.jpg"></a>
-                    </div>
-                    <div class="main-catalog-title">
-                        <a href="roll6.html">ANT Flex — ANT Flex Color</a>
-                    </div>
-                    <div class="main-catalog-description">
-                        <p>Цветное плотное напольное покрытие на основе регенератной резиновой крошки</p>
-                    </div>
-                </div>
-                <a href="roll6.html" class="page-btn">Перейти</a>
+                <p>Рулон, толщина от 2 до 10 мм., ширина 1,22 м., длина по желанию заказчика. Организуем оптовые
+                    поставки в любом объёме по низким ценам напрямую от производителя.</p>
             </div>
         </div>
-    </section>
+        <div class="clearfix"></div>
+        <h2 class="title-page-item">Варианты цветов покрытия</h2>
+        <div class="portfolio-page-block">
+            <div class="portfolio-block-item">
+                <a href="images/premium1.jpg" data-fancybox="gallery">
+                    <img src="images/premium1.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium2.jpg" data-fancybox="gallery">
+                    <img src="images/premium2.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium3.jpg" data-fancybox="gallery">
+                    <img src="images/premium3.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium4.jpg" data-fancybox="gallery">
+                    <img src="images/premium4.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium5.jpg" data-fancybox="gallery">
+                    <img src="images/premium5.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium6.jpg" data-fancybox="gallery">
+                    <img src="images/premium6.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium7.jpg" data-fancybox="gallery">
+                    <img src="images/premium7.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium8.jpg" data-fancybox="gallery">
+                    <img src="images/premium8.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium9.jpg" data-fancybox="gallery">
+                    <img src="images/premium9.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium10.jpg" data-fancybox="gallery">
+                    <img src="images/premium10.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium11.jpg" data-fancybox="gallery">
+                    <img src="images/premium11.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium12.jpg" data-fancybox="gallery">
+                    <img src="images/premium12.jpg" alt="">
+                </a>
+            </div>
+            <div class="portfolio-block-item">
+                <a href="images/premium13.jpg" data-fancybox="gallery">
+                    <img src="images/premium13.jpg" alt="">
+                </a>
+            </div>
+        </div>
 
+        <div class="title-page-item">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="page-btn">Заказать
+                консультацию</button>
+        </div>
+
+    </section>
 
     <footer class="footer-page">
         <div class="container">
